# onnx_graph

./: .gitignore  CMakeLists.txt  README.md
include/: compiler_driver.hpp  graph.hpp  graph_utils.hpp  mlir_codegen.hpp  node.hpp  onnx_loader.hpp  onnx_parser.hpp  tensor.hpp
scripts/: compare_with_pytorch.py
src/: compiler_driver.cpp  graph.cpp  main.cpp  mlir_codegen.cpp  onnx_loader.cpp  onnx_parser.cpp
tests/: CMakeLists.txt  test_graph_no_onnx.cpp
